<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/delete"
        android:icon="@drawable/baseline_delete"
        android:orderInCategory="100"
        android:title="@string/deleteall"
        app:showAsAction="collapseActionView" />

    <item
        android:id="@+id/action_search"
        android:title="@string/search"
        android:icon="@drawable/baseline_search_24"
        app:showAsAction="ifRoom|collapseActionView"
        app:actionViewClass="androidx.appcompat.widget.SearchView" />

    <item
        android:id="@+id/sort_menu"
        android:title="@string/sort">
        <menu>
            <group android:id="@+id/sort_group" android:checkableBehavior="single">
                <item
                    android:id="@+id/sort_by_date"
                    android:title="@string/sort_by_date"
                    app:showAsAction="never" />
                <item
                    android:id="@+id/sort_by_title"
                    android:title="@string/sort_by_title"
                    app:showAsAction="never" />
            </group>
        </menu>
    </item>
</menu>
