<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background_color_general"
    android:orientation="vertical">


    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="25dp"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="@id/guideline2"
        app:layout_constraintStart_toStartOf="@id/guideline1"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:id="@+id/linear_english"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/search_box_background"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/tv_english"
                style="@style/BigTextViewThin"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:layout_weight="1"
                android:padding="10dp"
                android:text="@string/english"
                android:textColor="@color/background_intro__mentv_2" />

            <ImageView
                android:id="@+id/img_english"
                android:layout_width="@dimen/_20sdp"
                android:layout_height="@dimen/_20sdp"
                android:layout_gravity="center"
                android:layout_marginEnd="5dp"
                android:src="@drawable/ic_picked"
                android:visibility="visible"
                app:tint="@color/g_hint" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/linear_arabic"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="15dp"
            android:background="@drawable/search_box_background"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/tv_arabic"
                style="@style/BigTextViewThin"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:layout_weight="1"
                android:gravity="end"
                android:padding="10dp"
                android:text="@string/arabic"
                android:textColor="@color/background_intro__mentv_2" />

            <ImageView
                android:id="@+id/img_arabic"
                android:layout_width="@dimen/_20sdp"
                android:layout_height="@dimen/_20sdp"
                android:layout_gravity="center"
                android:layout_marginEnd="5dp"
                android:src="@drawable/ic_picked"
                android:visibility="visible"
                app:tint="@color/g_hint" />

        </LinearLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="@dimen/_12sdp"
            >


            <androidx.appcompat.widget.SwitchCompat
                android:id="@+id/app_switch_theme"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:layout_weight="1"
                android:gravity="end"
                android:padding="10dp"
                android:text="@string/theme"
                android:textColor="@color/background_intro__mentv_2"
                android:textSize="@dimen/_15ssp"
                android:textStyle="bold"
                app:switchMinWidth="@dimen/_50sdp"
                app:switchPadding="@dimen/_10sdp"
                app:switchTextAppearance="@style/TextAppearance.AppCompat.Medium" />

        </LinearLayout>
    </LinearLayout>

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.04" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.96" />

</androidx.constraintlayout.widget.ConstraintLayout>